# lab-2-graphs

./: CMakeLists.txt  README.md
doc/: flowchart  ЛР2_CAOД_графы.docx  ЛР_САОД_графы.docx
src/: functions.cpp  functions.h  main.cpp
